// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots match error status with statustext 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3::before,
.c3::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c5::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c4.fi-label .fi-label_label-span {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0,0%,13%);
}

.c4.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c4.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c6 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0,0%,13%);
  font-size: 14px;
  line-height: 20px;
}

.c6.fi-status-text {
  display: block;
}

.c6.fi-status-text.fi-status-text--error {
  color: hsl(3,59%,48%);
}

.c1 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  width: 290px;
}

.c1 .fi-time-input_character-counter {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  color: hsl(0,0%,13%);
  font-size: 14px;
  line-height: 20px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-top: 4px;
}

.c1 .fi-time-input_character-counter.fi-time-input_character-counter--error {
  color: hsl(3,59%,48%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c1 .fi-time-input_bottom-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 .fi-time-input_wrapper {
  width: 100%;
  display: inline-block;
}

.c1 .fi-time-input_wrapper .fi-time-input_label--visible {
  margin-bottom: 10px;
}

.c1 .fi-time-input_wrapper .fi-hint-text {
  margin-bottom: 10px;
}

.c1 .fi-time-input_wrapper .fi-time-input_statusText--has-content {
  margin-top: 5px;
}

.c1 .fi-time-input_input-element-container {
  width: 60px;
}

.c1 .fi-time-input_input-element-container > input:focus {
  outline-color: hsl(196,77%,44%);
  outline-width: 2px;
  outline-offset: 2px;
  outline-style: solid;
}

.c1 .fi-time-input_input-element-container:focus-within > input:focus {
  outline: none;
}

.c1 .fi-time-input_input-element-container:focus-within {
  position: relative;
  outline: 3px solid transparent;
}

.c1 .fi-time-input_input-element-container:focus-within::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1.fi-time-input--full-width {
  width: 100%;
}

.c1 .fi-time-input_input {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  width: 100%;
  border: 1px solid hsl(202,7%,80%);
  border-radius: 2px;
  line-height: 1;
  background-color: hsl(0,0%,100%);
  height: 40px;
  padding: 10px;
  border-color: hsl(201,7%,58%);
}

.c1 .fi-time-input_input::-webkit-input-placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input::-moz-placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input:-ms-input-placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input::placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}

.c1 .fi-time-input_input::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.c1.fi-time-input_with-icon .fi-time-input_input-element-container {
  position: relative;
}

.c1.fi-time-input_with-icon .fi-time-input_input {
  padding-right: 40px;
}

.c1.fi-time-input_with-icon .fi-icon {
  position: absolute;
  width: 18px;
  height: 18px;
  top: 10px;
  right: 10px;
}

.c1.fi-time-input--error .fi-time-input_input {
  border: 2px solid hsl(3,59%,48%);
  padding-left: 9px;
  padding-top: 7px;
  padding-bottom: 7px;
}

.c1.fi-time-input--success .fi-time-input_input {
  border: 2px solid hsl(166,90%,34%);
  padding-left: 9px;
  padding-top: 7px;
  padding-bottom: 7px;
}

.c1.fi-time-input--disabled .fi-time-input_input {
  color: hsl(202,7%,67%);
  background-color: hsl(202,7%,97%);
}

.c1.fi-time-input--disabled .fi-icon-base-fill {
  fill: hsl(202,7%,67%);
}

<div
  class="c0 fi-time-input c1 fi-time-input--error"
>
  <span
    class="c2 fi-time-input_wrapper"
  >
    <div
      class="c3 c4 fi-time-input_label--visible fi-label"
    >
      <label
        class="c2 fi-label_label-span"
        for="test-id4"
      >
        Test input
      </label>
    </div>
    <div
      class="c0 fi-time-input_input-element-container"
    >
      <input
        aria-describedby="test-id4-statusText"
        aria-invalid="true"
        class="c5 fi-time-input_input"
        data-testid="TimeInput4"
        id="test-id4"
        maxlength="5"
        placeholder="-- . --"
        type="text"
        value=""
      />
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c2 c6 fi-time-input_statusText--has-content fi-status-text fi-status-text--error"
      id="test-id4-statusText"
    >
      This is a status text
    </span>
  </span>
</div>
`;

exports[`snapshots match hidden label 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3::before,
.c3::after {
  box-sizing: border-box;
}

.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c6::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c6::before,
.c6::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
}

.c4.fi-label .fi-label_label-span {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0,0%,13%);
}

.c4.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c4.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c7 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0,0%,13%);
  font-size: 14px;
  line-height: 20px;
}

.c7.fi-status-text {
  display: block;
}

.c7.fi-status-text.fi-status-text--error {
  color: hsl(3,59%,48%);
}

.c1 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  width: 290px;
}

.c1 .fi-time-input_character-counter {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  color: hsl(0,0%,13%);
  font-size: 14px;
  line-height: 20px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-top: 4px;
}

.c1 .fi-time-input_character-counter.fi-time-input_character-counter--error {
  color: hsl(3,59%,48%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c1 .fi-time-input_bottom-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 .fi-time-input_wrapper {
  width: 100%;
  display: inline-block;
}

.c1 .fi-time-input_wrapper .fi-time-input_label--visible {
  margin-bottom: 10px;
}

.c1 .fi-time-input_wrapper .fi-hint-text {
  margin-bottom: 10px;
}

.c1 .fi-time-input_wrapper .fi-time-input_statusText--has-content {
  margin-top: 5px;
}

.c1 .fi-time-input_input-element-container {
  width: 60px;
}

.c1 .fi-time-input_input-element-container > input:focus {
  outline-color: hsl(196,77%,44%);
  outline-width: 2px;
  outline-offset: 2px;
  outline-style: solid;
}

.c1 .fi-time-input_input-element-container:focus-within > input:focus {
  outline: none;
}

.c1 .fi-time-input_input-element-container:focus-within {
  position: relative;
  outline: 3px solid transparent;
}

.c1 .fi-time-input_input-element-container:focus-within::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1.fi-time-input--full-width {
  width: 100%;
}

.c1 .fi-time-input_input {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  width: 100%;
  border: 1px solid hsl(202,7%,80%);
  border-radius: 2px;
  line-height: 1;
  background-color: hsl(0,0%,100%);
  height: 40px;
  padding: 10px;
  border-color: hsl(201,7%,58%);
}

.c1 .fi-time-input_input::-webkit-input-placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input::-moz-placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input:-ms-input-placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input::placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}

.c1 .fi-time-input_input::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.c1.fi-time-input_with-icon .fi-time-input_input-element-container {
  position: relative;
}

.c1.fi-time-input_with-icon .fi-time-input_input {
  padding-right: 40px;
}

.c1.fi-time-input_with-icon .fi-icon {
  position: absolute;
  width: 18px;
  height: 18px;
  top: 10px;
  right: 10px;
}

.c1.fi-time-input--error .fi-time-input_input {
  border: 2px solid hsl(3,59%,48%);
  padding-left: 9px;
  padding-top: 7px;
  padding-bottom: 7px;
}

.c1.fi-time-input--success .fi-time-input_input {
  border: 2px solid hsl(166,90%,34%);
  padding-left: 9px;
  padding-top: 7px;
  padding-bottom: 7px;
}

.c1.fi-time-input--disabled .fi-time-input_input {
  color: hsl(202,7%,67%);
  background-color: hsl(202,7%,97%);
}

.c1.fi-time-input--disabled .fi-icon-base-fill {
  fill: hsl(202,7%,67%);
}

<div
  class="c0 fi-time-input c1"
>
  <span
    class="c2 fi-time-input_wrapper"
  >
    <div
      class="c3 c4 fi-label"
    >
      <label
        class="c5 fi-visually-hidden"
        for="test-id3"
      >
        Test input
      </label>
    </div>
    <div
      class="c0 fi-time-input_input-element-container"
    >
      <input
        aria-invalid="false"
        class="c6 fi-time-input_input"
        data-testid="TimeInput3"
        id="test-id3"
        maxlength="5"
        placeholder="-- . --"
        type="text"
        value=""
      />
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c2 c7 fi-status-text"
      id="test-id3-statusText"
    />
  </span>
</div>
`;

exports[`snapshots match hint text 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3::before,
.c3::after {
  box-sizing: border-box;
}

.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c6::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c6::before,
.c6::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c4.fi-label .fi-label_label-span {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0,0%,13%);
}

.c4.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c4.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c7 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0,0%,13%);
  font-size: 14px;
  line-height: 20px;
}

.c7.fi-status-text {
  display: block;
}

.c7.fi-status-text.fi-status-text--error {
  color: hsl(3,59%,48%);
}

.c5 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c5.fi-hint-text {
  display: block;
}

.c1 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  width: 290px;
}

.c1 .fi-time-input_character-counter {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  color: hsl(0,0%,13%);
  font-size: 14px;
  line-height: 20px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-top: 4px;
}

.c1 .fi-time-input_character-counter.fi-time-input_character-counter--error {
  color: hsl(3,59%,48%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c1 .fi-time-input_bottom-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 .fi-time-input_wrapper {
  width: 100%;
  display: inline-block;
}

.c1 .fi-time-input_wrapper .fi-time-input_label--visible {
  margin-bottom: 10px;
}

.c1 .fi-time-input_wrapper .fi-hint-text {
  margin-bottom: 10px;
}

.c1 .fi-time-input_wrapper .fi-time-input_statusText--has-content {
  margin-top: 5px;
}

.c1 .fi-time-input_input-element-container {
  width: 60px;
}

.c1 .fi-time-input_input-element-container > input:focus {
  outline-color: hsl(196,77%,44%);
  outline-width: 2px;
  outline-offset: 2px;
  outline-style: solid;
}

.c1 .fi-time-input_input-element-container:focus-within > input:focus {
  outline: none;
}

.c1 .fi-time-input_input-element-container:focus-within {
  position: relative;
  outline: 3px solid transparent;
}

.c1 .fi-time-input_input-element-container:focus-within::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1.fi-time-input--full-width {
  width: 100%;
}

.c1 .fi-time-input_input {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  width: 100%;
  border: 1px solid hsl(202,7%,80%);
  border-radius: 2px;
  line-height: 1;
  background-color: hsl(0,0%,100%);
  height: 40px;
  padding: 10px;
  border-color: hsl(201,7%,58%);
}

.c1 .fi-time-input_input::-webkit-input-placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input::-moz-placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input:-ms-input-placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input::placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}

.c1 .fi-time-input_input::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.c1.fi-time-input_with-icon .fi-time-input_input-element-container {
  position: relative;
}

.c1.fi-time-input_with-icon .fi-time-input_input {
  padding-right: 40px;
}

.c1.fi-time-input_with-icon .fi-icon {
  position: absolute;
  width: 18px;
  height: 18px;
  top: 10px;
  right: 10px;
}

.c1.fi-time-input--error .fi-time-input_input {
  border: 2px solid hsl(3,59%,48%);
  padding-left: 9px;
  padding-top: 7px;
  padding-bottom: 7px;
}

.c1.fi-time-input--success .fi-time-input_input {
  border: 2px solid hsl(166,90%,34%);
  padding-left: 9px;
  padding-top: 7px;
  padding-bottom: 7px;
}

.c1.fi-time-input--disabled .fi-time-input_input {
  color: hsl(202,7%,67%);
  background-color: hsl(202,7%,97%);
}

.c1.fi-time-input--disabled .fi-icon-base-fill {
  fill: hsl(202,7%,67%);
}

<body>
  <div>
    <div
      class="c0 fi-time-input c1"
    >
      <span
        class="c2 fi-time-input_wrapper"
      >
        <div
          class="c3 c4 fi-time-input_label--visible fi-label"
        >
          <label
            class="c2 fi-label_label-span"
            for="test-id2"
          >
            Test input
          </label>
        </div>
        <span
          class="c2 c5 fi-hint-text"
          id="test-id2-hintText"
        >
          Use format H.mm
        </span>
        <div
          class="c0 fi-time-input_input-element-container"
        >
          <input
            aria-describedby="test-id2-hintText"
            aria-invalid="false"
            class="c6 fi-time-input_input"
            data-testid="TimeInput2"
            id="test-id2"
            maxlength="5"
            placeholder="-- . --"
            type="text"
            value=""
          />
        </div>
        <span
          aria-atomic="true"
          aria-live="assertive"
          class="c2 c7 fi-status-text"
          id="test-id2-statusText"
        />
      </span>
    </div>
  </div>
</body>
`;

exports[`snapshots match minimal implementation 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3::before,
.c3::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c5::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c4.fi-label .fi-label_label-span {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0,0%,13%);
}

.c4.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c4.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c6 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0,0%,13%);
  font-size: 14px;
  line-height: 20px;
}

.c6.fi-status-text {
  display: block;
}

.c6.fi-status-text.fi-status-text--error {
  color: hsl(3,59%,48%);
}

.c1 {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  width: 290px;
}

.c1 .fi-time-input_character-counter {
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  color: hsl(0,0%,13%);
  font-size: 14px;
  line-height: 20px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-top: 4px;
}

.c1 .fi-time-input_character-counter.fi-time-input_character-counter--error {
  color: hsl(3,59%,48%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c1 .fi-time-input_bottom-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 .fi-time-input_wrapper {
  width: 100%;
  display: inline-block;
}

.c1 .fi-time-input_wrapper .fi-time-input_label--visible {
  margin-bottom: 10px;
}

.c1 .fi-time-input_wrapper .fi-hint-text {
  margin-bottom: 10px;
}

.c1 .fi-time-input_wrapper .fi-time-input_statusText--has-content {
  margin-top: 5px;
}

.c1 .fi-time-input_input-element-container {
  width: 60px;
}

.c1 .fi-time-input_input-element-container > input:focus {
  outline-color: hsl(196,77%,44%);
  outline-width: 2px;
  outline-offset: 2px;
  outline-style: solid;
}

.c1 .fi-time-input_input-element-container:focus-within > input:focus {
  outline: none;
}

.c1 .fi-time-input_input-element-container:focus-within {
  position: relative;
  outline: 3px solid transparent;
}

.c1 .fi-time-input_input-element-container:focus-within::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1.fi-time-input--full-width {
  width: 100%;
}

.c1 .fi-time-input_input {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  width: 100%;
  border: 1px solid hsl(202,7%,80%);
  border-radius: 2px;
  line-height: 1;
  background-color: hsl(0,0%,100%);
  height: 40px;
  padding: 10px;
  border-color: hsl(201,7%,58%);
}

.c1 .fi-time-input_input::-webkit-input-placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input::-moz-placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input:-ms-input-placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input::placeholder {
  color: hsl(201,7%,46%);
  opacity: 1;
  text-align: center;
}

.c1 .fi-time-input_input::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}

.c1 .fi-time-input_input::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.c1.fi-time-input_with-icon .fi-time-input_input-element-container {
  position: relative;
}

.c1.fi-time-input_with-icon .fi-time-input_input {
  padding-right: 40px;
}

.c1.fi-time-input_with-icon .fi-icon {
  position: absolute;
  width: 18px;
  height: 18px;
  top: 10px;
  right: 10px;
}

.c1.fi-time-input--error .fi-time-input_input {
  border: 2px solid hsl(3,59%,48%);
  padding-left: 9px;
  padding-top: 7px;
  padding-bottom: 7px;
}

.c1.fi-time-input--success .fi-time-input_input {
  border: 2px solid hsl(166,90%,34%);
  padding-left: 9px;
  padding-top: 7px;
  padding-bottom: 7px;
}

.c1.fi-time-input--disabled .fi-time-input_input {
  color: hsl(202,7%,67%);
  background-color: hsl(202,7%,97%);
}

.c1.fi-time-input--disabled .fi-icon-base-fill {
  fill: hsl(202,7%,67%);
}

<div
  class="c0 fi-time-input c1"
>
  <span
    class="c2 fi-time-input_wrapper"
  >
    <div
      class="c3 c4 fi-time-input_label--visible fi-label"
    >
      <label
        class="c2 fi-label_label-span"
        for="test-id"
      >
        Test input
      </label>
    </div>
    <div
      class="c0 fi-time-input_input-element-container"
    >
      <input
        aria-invalid="false"
        class="c5 fi-time-input_input"
        data-testid="TimeInput"
        id="test-id"
        maxlength="5"
        placeholder="-- . --"
        type="text"
        value=""
      />
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c2 c6 fi-status-text"
      id="test-id-statusText"
    />
  </span>
</div>
`;
